fix: vertical alignment of nav-bar

--- a/medica/css/main.css
+++ b/medica/css/main.css
@@ -31,6 +31,7 @@ html {
 .nav-bar {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .nav-menu {
